chaos/03-delay-registry.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: harbor-registry-delay-fault
  namespace: harbor
spec:
  hosts:
    - harbor-registry        # внутренний компонент registry
  http:
    - fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 5s
      route:
        - destination:
            host: harbor-registry
