chaos/temp-route.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: harbor-route-test
  namespace: harbor
spec:
  hosts:
    - "*"
  gateways:
    - harbor-gateway
  http:
    - route:
        - destination:
            host: harbor
            port:
              number: 80
